--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "fastify": "^5.6.1",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "grammy": "^1.38.3",
     "mongodb": "^6.20.0",
